# entrygraph

./: .dockerignore  .gitignore  Dockerfile  README.md  RELEASING.md  action.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
deploy/sentinel/: .gitignore  Dockerfile  docker-compose.yml
docs/: github-action.md  sentinel.md
explorer/: README.md  index.html  package-lock.json  package.json  vite.config.ts
explorer/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
explorer/src/components/: Entrypoints.tsx  GraphView.tsx  Reachability.tsx  Symbols.tsx  ui.tsx
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: RepoDetail.tsx  TokenGate.tsx  ui.tsx
src/entrygraph/: __init__.py  __main__.py  api.py  errors.py  kinds.py  results.py
src/entrygraph/analysis/: __init__.py  facts.py  reaching.py  summaries.py  verify.py
src/entrygraph/cli/: main.py  render.py
src/entrygraph/data/sinks/: csharp.toml  go.toml  java.toml  javascript.toml  lib_javascript.toml  lib_python.toml  php.toml  python.toml  ruby.toml  rust.toml
src/entrygraph/db/: engine.py  meta.py  migrations.py  models.py  queries.py
src/entrygraph/detect/: express_mounts.py  frameworks.py  graphql_link.py  grpc_expand.py  manifests.py  rails_draw.py  rails_link.py  taint.py
src/entrygraph/detect/entrypoints/: __init__.py  base.py  configs.py  csharp.py  golang.py  graphql.py  java.py  javascript.py  php.py  python.py  ruby.py  rust.py
src/entrygraph/explore/: __init__.py  api.py  cli.py
src/entrygraph/extract/: base.py  csharp.py  golang.py  graphql.py  ir.py  java.py  javascript.py  php.py  python.py  registry.py  ruby.py  rust.py
src/entrygraph/fs/: hashing.py  lang.py  remote.py  testfiles.py  walker.py
src/entrygraph/gate/: engine.py  sarif.py  store.py
src/entrygraph/graph/: adjacency.py  cte.py  fingerprint.py  scoring.py
src/entrygraph/parsing/: parsers.py  queries.py
src/entrygraph/pipeline/: scanner.py  worker.py  writer.py
src/entrygraph/queries/csharp/: calls.scm  definitions.scm  imports.scm
src/entrygraph/queries/go/: calls.scm  definitions.scm
src/entrygraph/queries/graphql/: definitions.scm
src/entrygraph/queries/java/: calls.scm  definitions.scm  imports.scm
src/entrygraph/queries/javascript/: calls.scm  definitions.scm  imports.scm
src/entrygraph/queries/php/: calls.scm  definitions.scm  imports.scm
src/entrygraph/queries/python/: calls.scm  definitions.scm  imports.scm
src/entrygraph/queries/ruby/: calls.scm  definitions.scm  imports.scm
src/entrygraph/queries/rust/: calls.scm  definitions.scm  imports.scm
src/entrygraph/resolve/: bindings.py  externals.py  hierarchy.py  resolver.py  symbol_table.py
src/entrygraph/sentinel/: __init__.py  api.py  app.py  cli.py  config.py  github.py  models.py  queue.py  store.py  webhook.py  worker.py
src/entrygraph/server/: __init__.py  app.py  appdb.py  cli.py  config.py  models.py
src/entrygraph/server/auth/: __init__.py  csrf.py  deps.py  oidc.py  sessions.py
src/entrygraph/server/jobs/: __init__.py  handlers.py  heal.py  progress.py  runner.py
src/entrygraph/server/routes/: __init__.py  gate.py  graph.py  jobs.py  keys.py  meta.py  repos.py  sentinel.py  serializers.py
tests/: conftest.py  test_api.py  test_appdb.py  test_bindings.py  test_catalog_full.py  test_cli.py  test_commonjs.py  test_csharp_callbacks.py  test_cte_bounds.py  test_engine_pragmas.py  test_entrypoint_expansion.py  test_entrypoint_params.py  test_entrypoints.py  test_entrypoints_csharp.py  test_entrypoints_go.py  test_entrypoints_javascript.py  test_entrypoints_php.py  test_entrypoints_python.py  test_entrypoints_ruby.py  test_entrypoints_rust.py  test_explore.py  test_extract_csharp.py  test_extract_go.py  test_extract_graphql.py  test_extract_java.py  test_extract_javascript.py  test_extract_php.py  test_extract_python.py  test_extract_ruby.py  test_extract_rust.py  test_fingerprint.py  test_framework_sources.py  test_frameworks.py  test_fuzzy_sink.py  test_gate.py  test_go_callbacks.py  test_graphql_link.py  test_grpc_expand.py  test_hardening.py  test_heal_fidelity.py  (+51 more)
tests/fixtures/csharp/aspnet_app/: app.csproj
tests/fixtures/csharp/minimalapi_app/: Program.cs
tests/fixtures/go/catalog_full_app/: go.mod  main.go
tests/fixtures/go/gin_app/: go.mod  main.go  service.go
tests/fixtures/go/grpc_app/: server.go
tests/fixtures/go/nethttp_app/: main.go
tests/fixtures/go/reaching/: app.go
tests/fixtures/java/methodref_app/: pom.xml
tests/fixtures/java/reaching/: App.java
tests/fixtures/java/spring_app/: pom.xml
tests/fixtures/javascript/commonjs_app/: server.js
tests/fixtures/javascript/express_app/: package.json
tests/fixtures/javascript/express_channels_app/: package.json
tests/fixtures/php/laravel_app/: composer.json
tests/fixtures/php/reaching/: app.php
tests/fixtures/precision/java/: App.java
tests/fixtures/precision/javascript/: app.js
tests/fixtures/precision/php/: app.php
tests/fixtures/precision/python/: app.py
tests/fixtures/precision/ruby/: app.rb
tests/fixtures/python/chained_sinks/: app.py
tests/fixtures/python/channels_app/: app.py
tests/fixtures/python/cli_app/: cli.py  tool.py
tests/fixtures/python/fastapi_app/: main.py
tests/fixtures/python/flask_app/: cli.py  requirements.txt
tests/fixtures/python/fuzzy_sink/: app.py
tests/fixtures/python/heal_fidelity/: caller.py  worker.py
tests/fixtures/python/may_continue/: app.py
tests/fixtures/python/reaching_defs/: app.py
tests/fixtures/python/sanitizer/: app.py
tests/fixtures/python/source_split/: app.py
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  main.tsx  styles.css
webapp/src/api/: client.test.ts  client.ts  queries.ts  types.ts
webapp/src/auth/: AuthProvider.tsx  LoginPage.tsx
webapp/src/components/: EmptyState.tsx  InfoPopover.tsx  ui.tsx
webapp/src/lib/: glossary.ts
(+73 files in other folders)
