[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "entrygraph"
dynamic = ["version"]  # derived from git tags by hatch-vcs (see [tool.hatch.version])
description = "Language-agnostic code graph: query symbols, entrypoints, and source-to-sink call paths from a SQLite index"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Brett Bergin", email = "brettberginbc@yahoo.com" }]
keywords = ["code-analysis", "call-graph", "tree-sitter", "static-analysis", "entrypoints"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "sqlalchemy>=2.0.30,<3.0",
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-language-pack>=1.10",
    "pathspec>=0.12,<1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
entrygraph = "entrygraph.cli.main:main"

[project.urls]
Repository = "https://github.com/brettbergin/entrygraph"

# Version comes from the latest `v*` git tag (set by the release workflow on each
# merge to main). `no-local-version` keeps the version PEP 440-clean so PyPI
# accepts it; the fallback is used only in a tag-less checkout.
[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version", fallback_version = "0.0.0" }

# Write the resolved version into the package so `entrygraph.__version__` and
# `entrygraph --version` report it at runtime.
[tool.hatch.build.hooks.vcs]
version-file = "src/entrygraph/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/entrygraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: performance guardrail tests (deselect with '-m \"not slow\"')"]
