[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "entrygraph"
dynamic = ["version"]  # derived from git tags by hatch-vcs (see [tool.hatch.version])
description = "Language-agnostic code graph: query symbols, entrypoints, and source-to-sink call paths from a SQLite index"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Brett Bergin", email = "brettberginbc@yahoo.com" }]
keywords = ["code-analysis", "call-graph", "tree-sitter", "static-analysis", "entrypoints"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "sqlalchemy>=2.0.30,<3.0",
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-language-pack>=1.10",
    "pathspec>=0.12,<1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.15",
    # mypy 2.x needs pathspec>=1.0 (imports pathspec.patterns.gitignore), which
    # conflicts with our runtime pin pathspec<1.0; 1.x is compatible.
    "mypy>=1.11,<2",
    "bandit>=1.7",
    "mdformat>=0.7",
    "mdformat-gfm>=0.3",
]

[project.scripts]
entrygraph = "entrygraph.cli.main:main"

[project.urls]
Repository = "https://github.com/brettbergin/entrygraph"

# Version comes from the latest `v*` git tag (set by the release workflow on each
# merge to main). `no-local-version` keeps the version PEP 440-clean so PyPI
# accepts it; the fallback is used only in a tag-less checkout.
[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version", fallback_version = "0.0.0" }

# Write the resolved version into the package so `entrygraph.__version__` and
# `entrygraph --version` report it at runtime.
[tool.hatch.build.hooks.vcs]
version-file = "src/entrygraph/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/entrygraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: performance guardrail tests (deselect with '-m \"not slow\"')"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["src/entrygraph/_version.py"]

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, bugbear, comprehensions, simplify
select = ["F", "E", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "SIM105",  # contextlib.suppress over try/except/pass — try/except is clearer here
    "B905",    # zip() without strict= — fine for equal-length paired iterables
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "E402", "SIM"]  # tests: allow assert False, late imports, verbose forms
# B023: the DFS helper closes over loop-scoped stack/on_path but is invoked
# synchronously within the same iteration, so the late-binding concern is moot.
"src/entrygraph/graph/adjacency.py" = ["B023"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
packages = ["entrygraph"]
ignore_missing_imports = true   # tree-sitter, sqlalchemy internals, etc. ship partial stubs
exclude = ["_version\\.py$"]

[tool.bandit]
# Scan library code only; tests/fixtures contain deliberately vulnerable sample apps.
exclude_dirs = ["tests", "src/entrygraph/_version.py"]
# B314/B405: ElementTree parses local project manifests (pom.xml/.csproj) the user is
# already indexing — not attacker-controlled network XML, so XXE risk is not applicable.
skips = ["B314", "B405"]
